<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/entries_rv"
        android:visibility="gone"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp"/>

    <TextView
        android:id="@+id/no_entry_tv"
        android:layout_width="match_parent"
        android:padding="@dimen/dimen_16dp"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:text="@string/no_entry_text"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
</LinearLayout>

<android.support.design.widget.FloatingActionButton
    android:id="@+id/add_new_entry"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_margin="@dimen/fab_margin"
    app:srcCompat="@drawable/ic_add_white_24dp" />

</android.support.design.widget.CoordinatorLayout>