<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_signout"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
</menu>